--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/14/2020 06:39:00 AM</p>
+    <p class="lastupdate">09/14/2020 06:44:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">50.1&#176;F</td>
+        <td class="data">49.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">50.1&#176;F</td>
+        <td class="data">49.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">50.1&#176;F</td>
+        <td class="data">49.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">47.9&#176;F</td>
+        <td class="data">47.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.948 inHg (0.008)</td>
+        <td class="data">29.949 inHg (0.010)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph W (270&#176;)</td>
+        <td class="data">1 mph WSW (248&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -155,8 +155,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             59.1</span><br/>
-          <span title="06:24:13 AM">
-            50.1</span>
+          <span title="06:40:57 AM">
+            49.9</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="01:52:32 PM (Sunday)">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="06:24:13 AM" class="loval">
-            50.1</span>
+          <span title="06:40:57 AM" class="loval">
+            49.9</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:29:11 AM (Sunday)" class="loval">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          337
+          335
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">94%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">12 days, 15 hours, 52 minutes</td>
+      <td class="data">12 days, 15 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">12 days, 15 hours, 52 minutes</td>
+      <td class="data">12 days, 15 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
