--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/14/2020 06:44:00 AM</p>
+    <p class="lastupdate">09/14/2020 06:49:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">49.9&#176;F</td>
+        <td class="data">49.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">49.9&#176;F</td>
+        <td class="data">49.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">49.9&#176;F</td>
+        <td class="data">49.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">47.7&#176;F</td>
+        <td class="data">47.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">92%</td>
+        <td class="data">91%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.949 inHg (0.010)</td>
+        <td class="data">29.952 inHg (0.012)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph WSW (248&#176;)</td>
+        <td class="data">1 mph SW (225&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -155,8 +155,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             59.1</span><br/>
-          <span title="06:40:57 AM">
-            49.9</span>
+          <span title="06:46:05 AM">
+            49.7</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="01:52:32 PM (Sunday)">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="06:40:57 AM" class="loval">
-            49.9</span>
+          <span title="06:46:05 AM" class="loval">
+            49.7</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:29:11 AM (Sunday)" class="loval">
@@ -303,14 +303,14 @@
       <tr>
         <td class="label">Barometer</td>
         <td class="data new_row hilo_day">
-          <span title="06:34:01 AM">
-            29.949</span><br/>
+          <span title="06:48:01 AM">
+            29.952</span><br/>
           <span title="01:32:00 AM">
             29.926</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="06:34:01 AM (Monday)">
-            29.949</span><br/>
+          <span title="06:48:01 AM (Monday)">
+            29.952</span><br/>
           <span title="02:56:02 PM (Sunday)">
             29.833</span>
         </td>
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          335
+          331
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">12 days, 15 hours, 57 minutes</td>
+      <td class="data">12 days, 16 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">12 days, 15 hours, 57 minutes</td>
+      <td class="data">12 days, 16 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
