--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/14/2020 07:39:00 AM</p>
+    <p class="lastupdate">09/14/2020 07:44:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">49.5&#176;F</td>
+        <td class="data">49.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">49.5&#176;F</td>
+        <td class="data">49.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">49.5&#176;F</td>
+        <td class="data">49.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">47.8&#176;F</td>
+        <td class="data">48.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">94%</td>
+        <td class="data">95%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.966 inHg (0.025)</td>
+        <td class="data">29.970 inHg (0.027)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph SSW (202&#176;)</td>
+        <td class="data">1 mph S (180&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -269,20 +269,20 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="07:23:47 AM">
-            94</span><br/>
+          <span title="07:40:53 AM">
+            95</span><br/>
           <span title="12:19:16 AM">
             63</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="07:23:47 AM (Monday)">
-            94</span><br/>
+          <span title="07:40:53 AM (Monday)">
+            95</span><br/>
           <span title="02:12:50 PM (Sunday)">
             16</span>
         </td>
         <td class="data new_row hilo_month">
-          <span title="09/14/2020 07:23:47 AM">
-            94</span><br/>
+          <span title="09/14/2020 07:40:53 AM">
+            95</span><br/>
           <span title="09/06/2020 04:59:20 PM">
             9</span>
         </td>
@@ -303,14 +303,14 @@
       <tr>
         <td class="label">Barometer</td>
         <td class="data new_row hilo_day">
-          <span title="07:26:01 AM">
-            29.969</span><br/>
+          <span title="07:43:01 AM">
+            29.970</span><br/>
           <span title="01:32:00 AM">
             29.926</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="07:26:01 AM (Monday)">
-            29.969</span><br/>
+          <span title="07:43:01 AM (Monday)">
+            29.970</span><br/>
           <span title="02:56:02 PM (Sunday)">
             29.833</span>
         </td>
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          292
+          287
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">94%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">12 days, 16 hours, 52 minutes</td>
+      <td class="data">12 days, 16 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">12 days, 16 hours, 52 minutes</td>
+      <td class="data">12 days, 16 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
