--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/14/2020 09:34:00 AM</p>
+    <p class="lastupdate">09/14/2020 09:39:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">59.0&#176;F</td>
+        <td class="data">59.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">59.0&#176;F</td>
+        <td class="data">59.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">59.0&#176;F</td>
+        <td class="data">59.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">51.1&#176;F</td>
+        <td class="data">51.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">75%</td>
+        <td class="data">74%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.983 inHg (0.035)</td>
+        <td class="data">29.982 inHg (0.034)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph N (0&#176;)</td>
+        <td class="data">1 mph WNW (292&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">73.6&#176;F</td>
+        <td class="data">73.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="12:00:01 AM">
-            59.1</span><br/>
+          <span title="09:37:57 AM">
+            59.5</span><br/>
           <span title="07:19:55 AM">
             49.2</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="12:00:01 AM" class="hival">
-            59.1</span>
+          <span title="09:37:57 AM" class="hival">
+            59.5</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="01:52:32 PM (Sunday)" class="hival">
@@ -235,14 +235,14 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="09:32:19 AM">
-            51.2</span><br/>
+          <span title="09:36:03 AM">
+            51.4</span><br/>
           <span title="03:06:12 AM">
             45.6</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="09:32:19 AM (Monday)">
-            51.2</span><br/>
+          <span title="09:36:03 AM (Monday)">
+            51.4</span><br/>
           <span title="02:16:06 PM (Sunday)">
             36.3</span>
         </td>
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          264
+          270
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">12 days, 18 hours, 47 minutes</td>
+      <td class="data">12 days, 18 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">12 days, 18 hours, 47 minutes</td>
+      <td class="data">12 days, 18 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
