--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/14/2020 09:44:00 AM</p>
+    <p class="lastupdate">09/14/2020 09:49:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,15 +50,15 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">60.0&#176;F</td>
+        <td class="data">60.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">60.0&#176;F</td>
+        <td class="data">60.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">60.0&#176;F</td>
+        <td class="data">60.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
@@ -66,15 +66,15 @@
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">73%</td>
+        <td class="data">71%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.980 inHg (0.031)</td>
+        <td class="data">29.981 inHg (0.029)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph NNW (338&#176;)</td>
+        <td class="data">1 mph ENE (68&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="09:43:35 AM">
-            60.0</span><br/>
+          <span title="09:48:53 AM">
+            60.8</span><br/>
           <span title="07:19:55 AM">
             49.2</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="09:43:35 AM" class="hival">
-            60.0</span>
+          <span title="09:48:53 AM" class="hival">
+            60.8</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="01:52:32 PM (Sunday)" class="hival">
@@ -235,14 +235,14 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="09:42:43 AM">
-            51.6</span><br/>
+          <span title="09:47:09 AM">
+            51.8</span><br/>
           <span title="03:06:12 AM">
             45.6</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="09:42:43 AM (Monday)">
-            51.6</span><br/>
+          <span title="09:47:09 AM (Monday)">
+            51.8</span><br/>
           <span title="02:16:06 PM (Sunday)">
             36.3</span>
         </td>
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          274
+          279
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">100%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">12 days, 18 hours, 57 minutes</td>
+      <td class="data">12 days, 19 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">12 days, 18 hours, 57 minutes</td>
+      <td class="data">12 days, 19 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
